...
                                    looking = false
                                }
                            }
                        },
                        modifier = Modifier
                            .fillMaxWidth()
                            .testTag("download_update"),
                    ) {
                        Text(
                            stringResource(
                                if (looking) R.string.version_download_looking else R.string.version_download,
                            ),
                        )
...
